--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Akshar:wght@300;400&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600;700&display=swap');
+
 :root{
     --cor0: rgb(255, 255, 255);
     --cor1: rgba(245, 245, 11, 0.932);
@@ -52,7 +54,7 @@ header p{
 nav{
     font-size: 1.3em;
     text-align: center;
-    padding: 20px 20px;
+    padding: 30px 30px;
     background-color: var(--cor2);
 }
 
@@ -60,8 +62,8 @@ nav > a{
     color: var(--cor0);
     text-decoration: underline;
     text-decoration-color: rgba(255, 255, 255, 0.308);
-    margin-left: 50px; 
-    margin-right: 50px;
+    margin-left: 70px; 
+    margin-right: 70px;
 }
 
 nav > a:hover{
@@ -74,7 +76,7 @@ nav > a:hover{
 }
 
 main{
-    min-width: 450px;
+    min-width: 350px;
     max-width: 800px;
     margin: auto;
     margin-bottom: 30px;
@@ -127,4 +129,14 @@ aside > ul {
 
 ul > li > a{
     color: black;
+}
+
+footer{
+    background-color: black;
+    color: white;
+    font-size: 1.5em;
+    font-weight: bold;
+    text-align: center;
+    padding: 10px;
+    font-family: 'Caveat', cursive;
 }
