--- a/style.css
+++ b/style.css
@@ -92,6 +92,12 @@ main h2{
     padding: 5px;
 }
 
+main h3{
+    text-decoration: underline;
+    text-align: center;
+    font-weight: normal;
+}
+
 main article{
     text-align: justify;
 }
@@ -117,7 +123,6 @@ div.map > iframe{
 }
 
 aside{
-    background-color: rgb(165, 161, 161);
     padding: 10px;
     margin: 10px;
 }
