--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ header p{
     padding-right: 10px;
     padding-left: 10px;
     margin: auto;
+    padding-bottom: 50px;
     text-shadow: 0px 10px 5px rgba(0, 0, 0, 0.644);
     font-weight: 300;
     letter-spacing: 5px;
