--- a/style.css
+++ b/style.css
@@ -23,21 +23,21 @@
 
 body{
     background-color: white;
+    background-image: url('imagens/logo.png');
+    background-repeat: repeat;
 }
 
 header{
     min-height: 200px;
+    background-image: linear-gradient(to top, black, #ffdf00);
+    color: white;
     padding-top: 75px;
-    padding-bottom: 75px;
-    margin: 35px 25px 25px 25px;
-    background-image: url('imagens/logocompleta_mary.png');
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center center;
+    margin: auto;
 }
 
 header h1{
     font-size: 3em;
+    text-align: center;
     font-family: var(--fonte-titulo);
     letter-spacing: 2px;margin: 0px;
     margin-bottom: 10px;
@@ -45,6 +45,7 @@ header h1{
 
 header p{
     font-size: 1.2em;
+    text-align: center;
     font-family: var(--fonte-subtitulo);
     max-width: 600px;
     padding-right: 10px;
@@ -53,7 +54,7 @@ header p{
     padding-bottom: 50px;
     text-shadow: 0px 10px 5px rgba(0, 0, 0, 0.644);
     font-weight: 300;
-    letter-spacing: 5px;
+    letter-spacing: 7px;
 }
 
 nav{
