--- a/style.css
+++ b/style.css
@@ -36,34 +36,14 @@ header{
     padding: 160px
 }
 
-@media (max-width: 575px){
-    header{
-        background-size: 400px;
-    }
-}
-
-@media (max-width: 400px){
-    header{
-        background-size: 85%;
-    }
-
-    nav > ul{
-        text-align: center;
-    }
-}
-
-nav {
+nav{
     padding: 15px;
     font-size: 1em;
     background-color: var(--cor2);
     box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.438);
 }
 
-nav > ul{
-    display: inline-block;
-}
-
-li > a{
+nav > a{
     color: white;
     padding: 20px;
     text-decoration: none;
@@ -71,7 +51,7 @@ li > a{
     transition-duration: .5s;
 }
 
-li > a:hover{
+nav > a:hover{
     background-color: rgba(255, 255, 255, 0.507);
     padding: 8px;
     border-radius: 5px;
@@ -81,6 +61,7 @@ li > a:hover{
 }
 
 main{
+    min-width: 400px;
     max-width: 1000px;
     margin: auto;
     margin-bottom: 30px;
@@ -109,12 +90,6 @@ main p{
     text-align: justify;
     text-indent: 10px;
     line-height: 1.6em;
-}
-
-@media (max-width: 980px){
-    main{
-        max-width: 800px;
-    }
 }
 
 main img{
