--- a/style.css
+++ b/style.css
@@ -30,14 +30,14 @@ header{
     background-image: url('imagens/logocompleta_mary.png');
     background-repeat: no-repeat;
     background-position: center center;
-    background-size: 85vh;
+    background-size: 50vh;
     background-attachment: scroll;
     color: white;
-    padding: 160px
+    padding: 100px
 }
 
 nav{
-    padding: 15px;
+    padding: 20px;
     font-size: 1em;
     background-color: var(--cor2);
     box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.438);
@@ -61,8 +61,7 @@ nav > a:hover{
 }
 
 main{
-    min-width: 400px;
-    max-width: 1000px;
+    max-width: 80vw;
     margin: auto;
     margin-bottom: 30px;
     padding: 30px;
@@ -85,7 +84,7 @@ main h2{
 main p{
     font-size: 1.5em;
     padding-top: 5px;
-    padding-bottom: 5px;
+    padding-bottom: 15px;
     font-weight: 500;
     text-align: justify;
     text-indent: 10px;
@@ -157,4 +156,47 @@ footer{
     padding-bottom: 5px;
     font-family: Arial, Helvetica, sans-serif
     letter-spacing: 2px;
+}
+
+@media (min-width: 1000px){
+    header{
+        height: 80px;
+        background-size: 70vh;
+    }
+}
+
+@media (max-width: 600px){
+    header{
+        background-size: 50vh;
+    }
+
+    main{
+        max-width: 75vw;
+    }
+
+    footer{
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+}
+
+@media (max-width: 350px){
+    header{
+        background-size: 45vh;
+        position: relative;
+    }
+
+    nav{
+        padding-left: 50px;
+        padding-right: 15px
+    }
+
+    main{
+        font-size: 0.8em;
+        max-width: 38vh;
+    }
+
+    footer{
+        font-size: 1em;
+    }
 }
