--- a/style.css
+++ b/style.css
@@ -165,6 +165,21 @@ footer{
     }
 }
 
+@media (max-width: 720px){
+    header{
+        background-size: 50vh;
+    }
+
+    main{
+        max-width: 75vw;
+    }
+
+    footer{
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+}
+
 @media (max-width: 600px){
     header{
         background-size: 50vh;
@@ -180,10 +195,9 @@ footer{
     }
 }
 
-@media (max-width: 350px){
+@media (max-width: 400px){
     header{
-        background-size: 45vh;
-        position: relative;
+        background-size: 40vh;
     }
 
     nav{
