--- a/style.css
+++ b/style.css
@@ -147,7 +147,7 @@ aside a:hover{
 footer{
     background-color: black;
     color: white;
-    font-size: 1.5em;
+    font-size: 1em;
     font-variant: small-caps;
     text-decoration: underline;
     text-decoration-color: rgba(255, 255, 255, 0.712);
@@ -158,17 +158,15 @@ footer{
     letter-spacing: 1px;
 }
 
-@media (min-width: 1020px){
+@media (max-width: 1020px){
     header#container{
-        height: 500px;
-        background-size: 30vh;
+        background-size: 50vh;
     }
 }
 
-@media (min-width: 1000px){
+@media (max-width: 1000px){
     header#container{
-        height: 275px;
-        background-size: 70vh;
+        background-size: 250px;
     }
 }
 
@@ -187,8 +185,7 @@ footer{
     }
 
     footer{
-        padding-top: 10px;
-        padding-bottom: 10px;
+        font-size: 0.8em;
     }
 }
 
@@ -207,15 +204,35 @@ footer{
     }
 
     footer{
-        padding-top: 10px;
-        padding-bottom: 10px;
+        font-size: 0.8em;
+    }
+}
+
+@media (max-width: 505px){
+    header#container{
+        height: 150px;
+        background-size: 200px;
+        
+    }
+
+    nav{
+        font-size: 1em;
+    }
+
+    main{
+        font-size: 0.7em;
+        max-width: 70vh;
+    }
+
+    footer{
+        font-size: 0.7em;
     }
 }
 
 @media (max-width: 400px){
     header#container{
         height: 170px;
-        background-size: 30vh;
+        background-size: 150px;
     }
 
     nav{
@@ -228,6 +245,6 @@ footer{
     }
 
     footer{
-        font-size: 1em;
+        font-size: 0.7em;
     }
 }
