--- a/style.css
+++ b/style.css
@@ -65,11 +65,15 @@ main{
     max-width: 80vw;
     margin: auto;
     margin-bottom: 30px;
-    padding: 30px;
+    padding: 5px 20px 5px 20px;
     background-color: #ffdf00;
     box-shadow: 0px 5px 30px rgb(0, 0, 0);
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
+}
+
+div.txt{
+    padding-top: 10px;
 }
 
 main h2{
@@ -79,15 +83,14 @@ main h2{
     font-variant: small-caps;
     text-decoration: underline;
     text-decoration-color: rgba(0, 0, 0, 0.671);
-    padding-top: 5px;
-    padding-bottom: 15px;
+    padding-bottom: 10px;
 }
 
 main p{
     font-size: 1.2em;
     font-family: var(--fonte-padrao);
     padding-top: 5px;
-    padding-bottom: 15px;
+    padding-bottom: 5px;
     font-weight: 500;
     text-align: left;
     text-indent: 20px;
@@ -206,6 +209,15 @@ footer{
     main{
         max-width: 75vw;
         font-size: 1em;
+        padding-bottom: 10px;
+    }
+
+    div.txt{
+        padding: 10px;
+    }
+
+    main ul{
+        text-align: center;
     }
 
     footer{
@@ -229,6 +241,10 @@ footer{
         max-width: 70vh;
     }
 
+    main ul{
+        text-align: center;
+    }
+
     footer{
         font-size: 0.7em;
     }
@@ -247,6 +263,10 @@ footer{
     main{
         font-size: 0.7em;
         max-width: 38vh;
+    }
+
+    main ul{
+        text-align: center;
     }
 
     footer{
