--- a/style.css
+++ b/style.css
@@ -38,7 +38,9 @@ header#container{
     background-image: url('imagens/logocompleta_mary.png');
     background-repeat: no-repeat;
     background-position: center center;
-    background-size: 50vh;
+    background-size: 30%;
+    padding-top: 50px;
+    padding-bottom: 50px;
 }
 
 nav{
@@ -178,15 +180,17 @@ footer{
     letter-spacing: 1px;
 }
 
-@media (max-width: 1020px){
+@media (max-width: 1100px){
     header#container{
         background-size: 50vh;
+        padding: 0px;
     }
 }
 
 @media (max-width: 1000px){
     header#container{
         background-size: 250px;
+        padding: 0px;
     }
 }
 
